Update BookController, add book filtering by title, refactor BookService